code/force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__EmployerAddress__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EmployerAddress__c</fullName>
    <label>Employer Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>