code/force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EmploymentStatus__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Home Maker</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Unemployed with Income</fullName>
            </value>
            <value>
                <fullName>Unemployed without Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>